Switch to using email instead of name Gravatar image by email hash

--- a/PunchClock/Base.lproj/Main.storyboard
+++ b/PunchClock/Base.lproj/Main.storyboard
@@ -587,7 +587,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="284" height="200"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="What's your name?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S10-N5-sxh">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="What's your C5 email?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S10-N5-sxh">
                                 <rect key="frame" x="23" y="85" width="240" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.78823529410000004" green="0.69803921570000005" blue="0.77647058820000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -596,7 +596,7 @@
                                     <constraint firstAttribute="height" constant="30" id="vd1-uY-Pj5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="alphabet" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="iQx-dW-9fZ" id="WQi-8H-1CS"/>
                                 </connections>
@@ -611,7 +611,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="284" height="200"/>
                     <connections>
-                        <outlet property="nameField" destination="S10-N5-sxh" id="Xlh-SF-cCZ"/>
+                        <outlet property="emailField" destination="S10-N5-sxh" id="pl6-OS-f6J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Sn-V8-dho" userLabel="First Responder" sceneMemberID="firstResponder"/>
